syntax = "proto3";
package com.seta.taxi;

message TaxiPresentation {
  uint32 id = 1;
  string ipAddress = 2;
  uint32 portNumber = 3;

  message Position {
    uint32 x = 1;
    uint32 y = 2;
  }

  Position position = 4;
}

message OkResponse {
  bool ok = 1;
}

service PresentationService {
  rpc present(TaxiPresentation) returns (OkResponse);
}
